<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/design_default_color_primary">

        <FrameLayout
            android:id="@+id/flTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/gradient" />

            <ImageView
                android:id="@+id/imgTop"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/top_rounded" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPhotoProfile"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:src="@drawable/pict"
                app:civ_border_color="@color/white"
                app:civ_border_width="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:text="@string/my_name"
                android:textColor="@color/black"
                android:layout_marginBottom="50dp"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@+id/flTop"
            android:layout_marginTop="-24dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="26dp"
            app:cardElevation="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_baseline_favorite_blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/list_makanan_favorite"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="85dp"
                android:layout_marginRight="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_baseline_email" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/my_email"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="135dp"
                android:layout_marginRight="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_baseline_phone" />

                <TextView
                    android:id="@+id/tv_my_dialphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/my_dialphone"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="185dp"
                android:layout_marginRight="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_baseline_location_on" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/my_address"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="235dp"
                android:layout_marginRight="35dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_baseline_settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/saetting"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</ScrollView>