<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgItemBanner"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:src="@android:color/darker_gray"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgItemPhoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_below="@+id/imgItemBanner"
            android:layout_marginTop="-60dp"
            android:src="@android:color/darker_gray"
            app:civ_border_width="6dp"
            app:civ_border_color="@android:color/white"/>

        <ImageView
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgItemBanner"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_baseline_favorite_border"/>

        <LinearLayout
            android:id="@+id/llContentDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgItemPhoto"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/idr"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/stock"
                android:textSize="21sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llContentDetail"
            android:layout_margin="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/tvItemDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/detail"
                android:textSize="16sp"
                android:lineSpacingMultiplier="1"
                android:layout_margin="11dp"/>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</ScrollView>